fix emoji support, update EIK version, add navigation hide/show logic on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -272,3 +272,14 @@ body {
 .user-profile-status-container {
   z-index: 1000 !important;
 }
+
+@media screen and (max-width: 768px) {
+  .sign-in-button {
+    height: 40px;
+  }
+
+  .sign-in-button-content {
+    padding: 0 12px;
+    gap: 4px;
+  }
+}
